# qa-auto-engineer-python-project-314

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: py-check.yml
pages/: labels_page.py  login_page.py  statuses_page.py  tasks_page.py  users_page.py
tests/: config.py  conftest.py  constants.py  test_auth.py  test_auth_flow.py  test_basic.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
tests/pages/: base.py  labels.py  login.py  statuses.py  tasks.py  users.py
tests/utils/: logging.py  text.py
