[project]
name = "hexlet-code"
version = "0.1.0"
description = "Project: Testing a Kanban Board with Selenium"
authors = [{ name = "RStructura" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest-repeat>=0.9.4",
    "ruff>=0.15.6",
]

[tool.ruff]
exclude = [
    "Makefile",
    ".venv",
    "__pycache__",
]
