[project]
name = "hexlet-code"
version = "0.1.0"
description = "Project: Testing a Kanban Board with Selenium"
authors = [{ name = "RStructura" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest==8.3.3",
    "requests==2.32.3",
    "selenium==4.25.0",
    "tenacity==9.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov>=7.1.0",
    "pytest-repeat>=0.9.4",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: quick tests to check basic functionality",
    
    "step_3: tests to check the functionality from step #3",

    "step_4: tests to check all functionalities from step #4",
    "step_4_viewList: tests to check the functionality from step #4",
    "step_4_createUser: tests to check the functionality from step #4",
    "step_4_editUser: tests to check the functionality from step #4",
    "step_4_deleteOne: tests to check the functionality from step #4",
    "step_4_deleteAll: tests to check the functionality from step #4",

    "step_5: tests to check all functionalities from step #5",
    "step_5_viewList: tests to check the functionality from step #5",
    "step_5_createStatus: tests to check the functionality from step #5",
    "step_5_editStatus: tests to check the functionality from step #5",
    "step_5_deleteOne: tests to check the functionality from step #5",
    "step_5_deleteAll: tests to check the functionality from step #5",

    "step_6: tests to check all functionalities from step #6",
    "step_6_viewList: tests to check the functionality from step #6",
    "step_6_createLabel: tests to check the functionality from step #6",
    "step_6_editLabel: tests to check the functionality from step #6",
    "step_6_deleteOne: tests to check the functionality from step #6",
    "step_6_deleteAll: tests to check the functionality from step #6",

    "step_7: tests to check all functionalities from step #7",
    "step_7_viewBoard: tests to check the functionality from step #7",
    "step_7_filtersTasks: tests to check the functionality from step #7",
    "step_7_createTasks: tests to check the functionality from step #7",
    "step_7_editTasks: tests to check the functionality from step #7",
    "step_7_dragAndDropTasks: tests to check the functionality from step #7",
    "step_7_deleteTasks: tests to check the functionality from step #7",
]