[project]
name = "hexlet-code"
version = "0.1.0"
description = "Project: Testing a Kanban Board with Selenium"
authors = [{ name = "RStructura" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest==8.3.3",
    "requests==2.32.3",
    "selenium==4.25.0",
    "tenacity==9.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov>=7.1.0",
    "pytest-repeat>=0.9.4",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages", "tests"]